src/core-crm/objects/List_Member__c/List_Member__c.object-meta.xml
<CustomObject>
    <description>List Member contains information about the Contacts who have been included in a Contact List and details about the staff member who contributed to compiling the list of contacts.</description>
    <label>List Member</label>
    <nameField>
        <displayFormat>LM-{0000000}</displayFormat>
        <label>List Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>