src/core-crm/objects/List_Member__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <description>Generic field to capture an end date associated with the Activity.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>