src/core-crm/objects/List_Member__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <description>Generic field to capture either what the participant is participating in or the role they might playing, or combination of both.

Typically this can either be a role the individual might play in the engagement OR an Event sub-type (e.g. BLF Jan 2023, BLF Jun 2023 etc.)</description>
    <inlineHelpText>Describes the engagement activity</inlineHelpText>
    <label>Activity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>