src/core-crm/objects/List_Member__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <description>Generic field to capture an start date associated with the Activity.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>