src/core-crm/objects/List_Member__c/fields/Column_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Column_1_Value__c</fullName>
    <description>The value for custom column 1.</description>
    <inlineHelpText>The value for custom column 1.</inlineHelpText>
    <label>Column 1 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>