src/core-crm/objects/List_Member__c/fields/Column_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Column_2_Value__c</fullName>
    <description>The value for custom column 2.</description>
    <inlineHelpText>The value for custom column 2.</inlineHelpText>
    <label>Column 2 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>