src/core-crm/objects/List_Member__c/fields/Column_3_Value__c.field-meta.xml
<CustomField>
    <fullName>Column_3_Value__c</fullName>
    <description>The value for custom column 3.</description>
    <inlineHelpText>The value for custom column 3.</inlineHelpText>
    <label>Column 3 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>