src/core-crm/objects/List_Member__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The email address for the Contact.</description>
    <formula>List_Member__r.Email</formula>
    <inlineHelpText>The email address for the Contact.</inlineHelpText>
    <label>Primary Email</label>
    <type>Text</type>
</CustomField>