src/core-crm/objects/List_Member__c/fields/Engagement_Score_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Engagement Opportunity Score Configuration.</description>
    <inlineHelpText>Lookup to Engagement Opportunity Score Configuration.</inlineHelpText>
    <label>Engagement Score Reference</label>
    <referenceTo>Engagement_Score_Configuration__c</referenceTo>
    <relationshipLabel>List Members</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <type>Lookup</type>
</CustomField>