src/core-crm/objects/List_Member__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <description>Lookup to the List record.</description>
    <label>List Id</label>
    <referenceTo>List__c</referenceTo>
    <relationshipLabel>List Members</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>