src/core-crm/objects/List_Member__c/fields/List_Contributor__c.field-meta.xml
<CustomField>
    <fullName>List_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QUT staff member who included, or requested to include the Contact in the list.</description>
    <inlineHelpText>QUT staff member who included, or requested to include the Contact in the list.</inlineHelpText>
    <label>List Contributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>List_Contributor__c.CreatedBy.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>List_Contributor__c</referenceTo>
    <relationshipLabel>List Members</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <type>Lookup</type>
</CustomField>