src/core-crm/objects/List_Member__c/fields/List_Member__c.field-meta.xml
<CustomField>
    <fullName>List_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A Contact who has met the criteria to be included in the list.</description>
    <inlineHelpText>Contact who has met criteria for inclusion in the list.</inlineHelpText>
    <label>List Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>List Members</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>