src/core-crm/objects/List_Member__c/fields/List_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>List_Member_Status__c</fullName>
    <description>Indicates whether the prospective Contact has been qualified to move to the next Engagement stage.

Users can select ‘Not Applicable’ to mark a Contact who is not proceeding to the next stage but has not been officially ‘qualified’. For example, where a Contact has been mistakenly added to the list.</description>
    <inlineHelpText>Indicates whether the prospective Contact has been qualified to move to the next Engagement stage.</inlineHelpText>
    <label>List Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>