src/core-crm/objects/List_Member__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>The mobile phone number for the contact.</description>
    <formula>List_Member__r.MobilePhone</formula>
    <inlineHelpText>The mobile phone number for the contact.</inlineHelpText>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>