src/core-crm/objects/List_Member__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The score given to the Contact based on their participation in the Engagement Category/Subcategory.</description>
    <formula>TEXT(Engagement_Score_Configuration__r.Score__c)</formula>
    <inlineHelpText>The score given to the Contact based on their participation in the Engagement Category/Subcategory.</inlineHelpText>
    <label>Score</label>
    <type>Text</type>
</CustomField>