src/core-crm/objects/List_Member__c/fields/Score_Category__c.field-meta.xml
<CustomField>
    <fullName>Score_Category__c</fullName>
    <formula>TEXT(List__r.Engagement_Opportunity__r.Score_Category__c)</formula>
    <label>Score Category</label>
    <type>Text</type>
</CustomField>