src/core-crm/objects/List_Member__c/fields/Score_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Score_Subcategory__c</fullName>
    <description>Engagement Opportunity classification sub-category.</description>
    <formula>TEXT( List__r.Engagement_Opportunity__r.Score_Subcategory__c )</formula>
    <label>Score Subcategory</label>
    <type>Text</type>
</CustomField>