src/core-crm/objects/List_Member__c/recordTypes/List_Member_Distributed_List.recordType-meta.xml
<RecordType>
    <fullName>List_Member_Distributed_List</fullName>
    <active>true</active>
    <description>Individual contact included on the list that meets the list criteria and have been qualified for inclusion</description>
    <label>List Member Distributed List</label>
</RecordType>