src/core-crm/objects/List_Member__c/recordTypes/List_Member_Engagement_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>List_Member_Engagement_Opportunity</fullName>
    <active>true</active>
    <description>Individual contact included that meets the list criteria that has been qualified for inclusion in the engagement</description>
    <label>List Member Engagement Opportunity</label>
</RecordType>